--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
               <a href="#" class="brand-logo">Criptonoticias</a>
               <ul class="right hide-on-med-and-down">
                 <li><a class="btn yellow lighten-1" href="mailto::motellondev@gmail.com">Email</a></li>
-                <li><a class="btn yellow lighten-1" href="https://github.com/motellondev">Github</a></li>
+                <li><a class="btn yellow lighten-1" href="https://github.com/motellondev/cryptonews_flask">Github</a></li>
               </ul>
             </div>
           </nav>
@@ -62,7 +62,7 @@
                 <div class="col l6 s12">
                     <h5>Contacto</h5>
                     <ul>
-                        <li> Github: <a href="https://github.com/motellondev">https://github.com/motellondev</a></li>
+                        <li> Github: <a href="https://github.com/motellondev/cryptonews_flask">https://github.com/motellondev/cryptonews_flask</a></li>
                         <li>Email: <a href="mailto::motellondev@gmail.com">motellondev@gmail.com</a></li>
                     </ul>
                 </div>
